<resources>
    <string name="app_name">YounesWhatsApp</string>
    <string name="email">Email</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="creer">Creer</string>
    <string name="Login">Login</string>
    <string name="Authentifier">Authentifier</string>
    <string name="chat_app">Chat App</string>
    <string name="Succes">Succes</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_user">App User</string>
    <string name="envoyer_un_message">Envoyer un message...</string>
</resources>
